2013-11-19 Massimo Manghi <mxmanghi@apache.org>
    * 2.1: merging latest changes from trunk
    * Changelog: bumping up autoconf generated version number to 2.1.4

2013-11-04 Massimo Manghi <mxmanghi@apache.org>
    * src/Makefile.am: this Makefile.am is now in charge for building mod_rivet
    librivet.so and librivetparser.so. This fixes and problem with the 'distclean'
    target and keeps us from further customization of automake (subdir-objects
    property)
    * src/runtests.tcl: changed path to mod_rivet.so and librivetparser.so
 
2013-10-15 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetcmds/rivetCore.c: 'headers redirect' used to return TCL_RETURN
    to force the caller to terminate and interrupt the processing. It didn't 
    actually worked exactly that way and starting with Tcl 8.6.1 it also failed
    returning a Tcl invalid error code (Bug #55583). Turning it into TCL_OK
    seems to cure the problem

2013-09-26 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/session.xml: fixed code example indentation
    * rivet/packages/calendar.xml: fixed class and tag for calendar banner

2013-09-23 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/calendar/calendar.tcl: fixed zero length argument list
    calling method emit

2013-09-21 Massimo Manghi <mxmanghi@apache.org>
    * 2.1: merging once again from trunk
    * contrib/tcl.vim: list of subcommands completed

2013-09-20 Massimo Manghi <mxmanghi@apache.org>
    * 2.1: merging latest changes in trunk
    * contrib/tcl.vim: Vim's syntax highlighting extension including also
    rivet's command set (experimental)

2013-09-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: removed paranoid debugging log messages

2013-09-17 Massimo Manghi <mxmanghi@apache.org>
    * src/[parser|apache-2|librivet]/Makefile.am: AM_CPPFLAGS are not
    a transparent replacement for INCLUDES at least when a Makefile.am is
    in a subdirectory. Placing include directory switches in the target